style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
body{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px 30px 20px 30px;
    background-color: #111;
}
.container{
    display: flex;
    justify-content: center;
    align-items: center;   
    flex-direction: column;
}

/* dont wanna mess with these */
.container .coin-price{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: -10px 20px;
    border-radius: 5px;
    padding: 10px;
    width: 400px;
    margin-bottom: 10px;
    color: #eee;
    background-color: #333;
}

.container .coin-price .logo{
    width: 70px;
    margin-right: 10px;
}
.container .coin-price .logo img{
    width: 70%;
}
.container .coin-price div{
    display: block;
}
.container .coin-price div h1{
    font-size: 20px;
}

